k8s/backend-service-ordering.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-ordering
  annotations:
    io.cilium/global-service: "true"
    io.cilium/service-affinity: "local"
spec:
  selector:
    app: backend-ordering
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
