k8s/backend-httproute-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-backend
spec:
  parentRefs:
    - name: cilium-gateway-backend
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend-service-gateway
          port: 80
