k8s/backend-httproute-notification.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-backend-notification
spec:
  parentRefs:
    - name: cilium-gateway-backend-notification
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend-service-notification
          port: 80
