k8s/backend-httproute-rating.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-backend-rating
spec:
  parentRefs:
    - name: cilium-gateway-backend-rating
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend-service-rating
          port: 80
